--- a/Contact.html
+++ b/Contact.html
@@ -35,6 +35,7 @@
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
                 <ul class="dropdown-menu">
+                  <li><a href="index.html">Professional Biography</a></li>
                   <li><a href="Resume.html">Resume</a></li>
                   <li><a href="Contact.html">Contact</a></li>
                 </ul>
