--- a/Resume.html
+++ b/Resume.html
@@ -30,7 +30,7 @@
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-              <li class="active"><a href="Resume.html">Resume<span class="sr-only">(current)</span></a></li>
+              <li><a href="Resume.html">Resume<span class="sr-only">(current)</span></a></li>
               <li><a href="Contact.html">Contact</a></li>
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
