--- a/Contact.html
+++ b/Contact.html
@@ -50,7 +50,7 @@
             <img src="headshot.jpg" class="img-responsive center-block" alt="Responsive image" height="400px" width="300px">
             <p><h2><b>Contact Information</b></h2></p>
             <p class="h4">Phone:732-347-9436</p>
-            <p class="h4">Email:Harshilpatel753@gmail.com</p>
+            <p class="h4">Email:<a href="mailto:harshilpatel753@gmail.com">Harshilpatel753@gmail.com</a></p>
         </div>
     </div> 
     <div class="class col-md-4"></div>
