--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
       
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav">
+            <ul class="nav navbar-nav pull-right">
               <li><a href="Resume.html">Resume <span class="sr-only">(current)</span></a></li>
               <li><a href="Contact.html">Contact</a></li>
               <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Resources<span class="caret"></span></a>
                 <ul class="dropdown-menu">
                   <li><a href="index.html">Professional Biography</a></li>
                   <li><a href="Resume.html">Resume</a></li>
@@ -49,7 +49,7 @@
         <div class="class panel-body text-center">
             <img src="headshot.jpg" class="img-responsive center-block" alt="Responsive image" height="400px" width="300px">
             <p><h3><b>Professional Biography</b></h3></p>
-            <p>I have worked in multiple industries ranging from medical facilities to customer service fields providing me with a wide range of experiences in everything from managing businesses to assisting with sales and marketing. I have performed multiple types of analysis related to monitoring prices, tracking sales data, forecasting sales growth, and managing budgets. I have been actively involved in leading large teams of greater than 20 individuals. The passion I have for helping others and the world has led me to spearhead organizations such as Enactus to drive social entrepreneurship and benefit others. My large range of experiences make me a great candidate because they not only provide me with multiple insights, but also the ability to improvise and adapt to almost any situation.</p>
+            <p class="bio">I have worked in multiple industries ranging from medical facilities to customer service fields providing me with a wide range of experiences in everything from managing businesses to assisting with sales and marketing. I have performed multiple types of analysis related to monitoring prices, tracking sales data, forecasting sales growth, and managing budgets. I have been actively involved in leading large teams of greater than 20 individuals. The passion I have for helping others and the world has led me to spearhead organizations such as Enactus to drive social entrepreneurship and benefit others. My large range of experiences make me a great candidate because they not only provide me with multiple insights, but also the ability to improvise and adapt to almost any situation</p>
         </div>
     </div> 
     
