--- a/Contact.html
+++ b/Contact.html
@@ -29,11 +29,11 @@
       
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav">
+            <ul class="nav navbar-nav pull-right">
               <li><a href="Resume.html">Resume <span class="sr-only">(current)</span></a></li>
               <li><a href="Contact.html">Contact</a></li>
               <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Resources <span class="caret"></span></a>
                 <ul class="dropdown-menu">
                   <li><a href="index.html">Professional Biography</a></li>
                   <li><a href="Resume.html">Resume</a></li>
@@ -49,8 +49,9 @@
         <div class="class panel-body text-center">
             <img src="headshot.jpg" class="img-responsive center-block" alt="Responsive image" height="400px" width="300px">
             <p><h2><b>Contact Information</b></h2></p>
-            <p class="h4">Phone:732-347-9436</p>
-            <p class="h4">Email:<a href="mailto:harshilpatel753@gmail.com">Harshilpatel753@gmail.com</a></p>
+            <p class="h4">Phone: 732-347-9436</p>
+            <p class="h4">Email: <a href="mailto:harshilpatel753@gmail.com">Harshilpatel753@gmail.com</a></p>
+            <p class="h4">Linkedin: <a href="https://www.linkedin.com/in/harshil-patel-384812a4">https://www.linkedin.com/in/harshil-patel-384812a4</a></p>
         </div>
     </div> 
     <div class="class col-md-4"></div>
