open linkedin in new tab

--- a/Contact.html
+++ b/Contact.html
@@ -51,7 +51,7 @@
             <p><h2><b>Contact Information</b></h2></p>
             <p class="h4">Phone: 732-347-9436</p>
             <p class="h4">Email: <a href="mailto:harshilpatel753@gmail.com">Harshilpatel753@gmail.com</a></p>
-            <p class="h4">Linkedin: <a href="https://www.linkedin.com/in/harshil-patel-384812a4">https://www.linkedin.com/in/harshil-patel-384812a4</a></p>
+            <p class="h4">Linkedin: <a href="https://www.linkedin.com/in/harshil-patel-384812a4" target="blank">https://www.linkedin.com/in/harshil-patel-384812a4</a></p>
         </div>
     </div> 
     <div class="class col-md-4"></div>
